Fixed Recover Password Tests to reflect changes to warning message

--- a/Tests/testRecoverPassword/InvalidEmailFirstnameLastname.html
+++ b/Tests/testRecoverPassword/InvalidEmailFirstnameLastname.html
@@ -39,7 +39,7 @@
 <tr>
 	<td>assertText</td>
 	<td>css=h4.modal-title</td>
-	<td>Information don't match. Please try again.</td>
+	<td>Invalid First name, Last name or Email. Please try again.</td>
 </tr>
 <tr>
 	<td>click</td>
@@ -49,9 +49,8 @@
 <tr>
 	<td>assertText</td>
 	<td>id=errorSpan</td>
-	<td>Information don't match. Please try again.</td>
+	<td>Invalid first name, last name or email. Please try again.</td>
 </tr>
-
 </tbody></table>
 </body>
 </html>
