Fixed typos in recover password tests

--- a/Tests/testCase_RecoverPassword/InvalidEmailFirstnameLastname.html
+++ b/Tests/testCase_RecoverPassword/InvalidEmailFirstnameLastname.html
@@ -49,7 +49,7 @@
 <tr>
 	<td>assertText</td>
 	<td>id=errorSpan</td>
-	<td>Invalid first name, last name or email. Please try again.</td>
+	<td>Invalid First name, Last name or Email. Please try again.</td>
 </tr>
 </tbody></table>
 </body>
