--- a/Portfolio/Artifact 4- Test Work on request [VOLUNTEER]/showconfirm.html
+++ b/Portfolio/Artifact 4- Test Work on request [VOLUNTEER]/showconfirm.html
@@ -4,27 +4,32 @@
 <head profile="http://selenium-ide.openqa.org/profiles/test-case">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="selenium.base" href="http://54.206.56.104/" />
-<title>Login-test</title>
+<title>showconfirm</title>
 </head>
 <body>
 <table cellpadding="1" cellspacing="1" border="1">
 <thead>
-<tr><td rowspan="1" colspan="3">Login-test</td></tr>
+<tr><td rowspan="1" colspan="3">showconfirm</td></tr>
 </thead><tbody>
 <tr>
 	<td>open</td>
-	<td>/signin.php</td>
+	<td>/index.php</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>link=Sign in</td>
 	<td></td>
 </tr>
 <tr>
 	<td>type</td>
 	<td>id=email</td>
-	<td>rageleong_ufo@hotmail.com</td>
+	<td>apple@mail.com</td>
 </tr>
 <tr>
 	<td>type</td>
 	<td>id=password</td>
-	<td>K+BSi!RJ!i</td>
+	<td>apple</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -32,38 +37,18 @@
 	<td></td>
 </tr>
 <tr>
-	<td>assertTextPresent</td>
+	<td>clickAndWait</td>
+	<td>link=Paint roof 1</td>
 	<td></td>
-	<td>Email or password wrong</td>
-</tr>
-<tr>
-	<td>type</td>
-	<td>id=email</td>
-	<td>rageleong_ufo@hotmail.com</td>
-</tr>
-<tr>
-	<td>type</td>
-	<td>id=password</td>
-	<td>leongcp93</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>id=submit</td>
-	<td></td>
-</tr>
-<tr>
-	<td>click</td>
-	<td>css=button.navbar-toggle</td>
-	<td></td>
-</tr>
-<tr>
-	<td>click</td>
 	<td>link=Sign Out</td>
 	<td></td>
 </tr>
 <tr>
 	<td>click</td>
-	<td>css=button.close</td>
+	<td>link=Close</td>
 	<td></td>
 </tr>
 
