--- a/Tests/testCase_VolunteerAccount/CreateAccount/testeCase03_createVolunteerAccount_succesfully.html
+++ b/Tests/testCase_VolunteerAccount/CreateAccount/testeCase03_createVolunteerAccount_succesfully.html
@@ -4,12 +4,12 @@
 <head profile="http://selenium-ide.openqa.org/profiles/test-case">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="selenium.base" href="http://54.206.56.104/" />
-<title>createVolunteerAccount</title>
+<title>testeCase03_createVolunteerAccount_succesfully</title>
 </head>
 <body>
 <table cellpadding="1" cellspacing="1" border="1">
 <thead>
-<tr><td rowspan="1" colspan="3">createVolunteerAccount</td></tr>
+<tr><td rowspan="1" colspan="3">testeCase03_createVolunteerAccount_succesfully</td></tr>
 </thead><tbody>
 <tr>
 	<td>open</td>
@@ -91,7 +91,36 @@
 	<td>link=Close</td>
 	<td></td>
 </tr>
-
+<tr>
+	<td>selectWindow</td>
+	<td>null</td>
+	<td></td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>id=email</td>
+	<td>volunteer@mail.com</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>id=password</td>
+	<td>volunteer</td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>id=submit</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>link=Sign Out</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>link=Close</td>
+	<td></td>
+</tr>
 </tbody></table>
 </body>
 </html>
